# python-dlt-init-template

./: .gitignore  README.md  __init__.py  pipeline.py  pyproject.toml  requirements.txt
.dlt/: config.toml
variants/: chess.py  twitter.py
