[tool.poetry]
name = "python-dlt-init-template"
version = "1.0.0"
description = "dlt pipeline template for the dlt init command"
authors = ["Marcin Rudolf <rudolfix@rudolfix.org>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "0.982"
flake8 = "^5.0.0"
bandit = "^1.7.0"
flake8-bugbear = "^22.0.0"
pytest-pythonpath = "^0.7.3"
pytest-order = "^1.0.0"
pytest-cases = "^3.6.9"
pytest-forked = "^1.3.0"
types-PyYAML = "^6.0.7"
types-cachetools = "^4.2.9"
types-protobuf = "^3.19.8"
types-simplejson = "^3.17.0"
types-requests = "^2.25.6"
types-python-dateutil = "^2.8.15"
flake8-tidy-imports = "^4.8.0"
flake8-encodings = "^0.5.0"
flake8-builtins = "^1.5.3"
types-SQLAlchemy = "^1.4.53"

[tool.poetry.group.dev.dependencies]
python-dlt = "^0.2.0a21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
